--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ numpy==1.26.4
 PyAudio==0.2.14
 pycodestyle==2.11.1
 pyflakes==3.2.0
+pynput==1.7.7
+pyobjc-core==10.3.1
+pyobjc-framework-ApplicationServices==10.3.1
+pyobjc-framework-Cocoa==10.3.1
+pyobjc-framework-CoreText==10.3.1
+pyobjc-framework-Quartz==10.3.1
+six==1.16.0
