--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y portaudio19-dev
+        sudo apt-get install -y portaudio19-dev xvfb
 
     - name: Install dependencies
       run: |
@@ -34,4 +34,4 @@ jobs:
 
     - name: Run tests
       run: |
-        python -m unittest discover tests
+        xvfb-run --auto-servernum python -m unittest discover tests
